src/assets/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');

* {
  font-family: 'Ubuntu', sans-serif;
}

h1.bold {
  font-weight: 500;
  font-size: 3.5rem;
  color: #fff;
}

p {
  color: #fff;
}

input.form-control {
  padding: 1.500rem 0.75rem;
}

body, html {
    margin: 0;
    height: 100%;
}
  
  .background-image {
    background-image: url("images/landing.jpg"), linear-gradient(rgba(19, 0, 71, 0.927),rgba(25, 0, 56, 0.5));
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-blend-mode: overlay;
    background-attachment: fixed;
    min-height: 100vh;;
  }
  
  .submit-button {
    font-family: 'Ubuntu', sans-serif;
    background-color: aqua;
    border: none;
    border-radius: 50px;
    padding: 20px;
    text-align: center;
    width: 80%;
    display: block;
    margin: auto;
    color:rgb(94, 94, 94);
  }

